--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <h1 class="tit2">Mario</h1>
         <h1 class="tit3">World</h1>
 
-        <img src="/images/Tela.png" class="img1">
+        <img src="./images/Tela.png" class="img1">
 
         
         <a href="jogo.html" class="rel">Jogar</a>
 
         <h1 class="dev">DEV:</h1>
 
-        <img src="/images/Programador.png" class="eu">
+        <img src="./images/Programador.png" class="eu">
         
         <h1 class="nome">Eduardo Proença</h1>
 
