--- a/jogo.html
+++ b/jogo.html
@@ -12,9 +12,9 @@
             <a href="index.html" class="voltar"></a>
 
         <div class="game-board">
-            <img src="./images/clouds.png" class="clouds">
-            <img src="./images/mario.gif" class="mario">
-            <img src="./images/pipe.png" class="pipe">
+            <img src="images/clouds.png" class="clouds">
+            <img src="images/mario.gif" class="mario">
+            <img src="images/pipe.png" class="pipe">
 
         </div>
                
